name:               simp
version:            0.1.0
synopsis:           ..
description:        ...
homepage:           https://github.com/neosimsim/simp
license:            BSD3
license-file:       LICENSE
author:             Alexander Ben Nasrallah
maintainer:         me@abn.sh

-- copyright:
category:           Misc
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >=1.10

source-repository head
  type:     git
  location: https://github.com/neosimsim/simp

flag develop
  description: Enable warnings and treat them as error.
  default:     False
  manual:      True

library
  exposed-modules:
    Lib
    Parser
    Sheila.Parser

  -- other-modules:
  -- other-extensions:
  build-depends:
      array
    , base   >=4 && <5

  hs-source-dirs:   src
  default-language: Haskell2010

  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults

executable simp
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
      base  >=4 && <5
    , simp

  hs-source-dirs:   app
  default-language: Haskell2010

  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
      base        >=4 && <5
    , QuickCheck
    , simp

  if flag(develop)
    ghc-options: -Wall -Werror -Wno-type-defaults
